# google-voice-import

./: pyproject.toml
data/: .gitignore
scripts/: sandbox.ipynb
src/google_voice_import/: __init__.py  mms.py  sms.py
