[tool.poetry]
name = "google-voice-import"
version = "0.1.0"
description = "Package to convert exported data from Google Takeout into an importable xml file"
authors = ["Kevin J. McNamara <kjmcnamara1@gmail.com>"]
readme = "README.md"
packages = [{ include = "google_voice_import", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
lxml = "^4.9.3"


[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
